使用 Colaboratory 建立

--- a/nvidia_samples/nvidia_sample.ipynb
+++ b/nvidia_samples/nvidia_sample.ipynb
@@ -31,20 +31,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gvlavcVD4K7W",
-        "outputId": "8d9e3ae9-58ae-45f4-b201-db5e253caf91"
+        "outputId": "0c0ee820-f622-4fac-d76e-7cb7317ef6d9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Sep 26 08:24:09 2022       \n",
+            "Tue Sep 27 03:31:41 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -53,7 +53,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   38C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   49C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -122,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "evxzc04GGqH3",
-        "outputId": "ff0f0066-664b-4a6a-9a85-ccd50e2f7b2a"
+        "outputId": "0584b8a6-a025-420c-c354-e36d9213bdc8"
       },
       "outputs": [
         {
@@ -368,13 +368,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YnLx3pVtLTca",
-        "outputId": "3e36e0aa-babf-4a9e-bade-3ef86763455f"
+        "outputId": "58140f35-56fd-48c3-cee4-81a769139357"
       },
       "outputs": [
         {
@@ -382,12 +382,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Cuda_Colab_study'...\n",
-            "remote: Enumerating objects: 214, done.\u001b[K\n",
-            "remote: Counting objects: 100% (214/214), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (177/177), done.\u001b[K\n",
-            "remote: Total 214 (delta 85), reused 126 (delta 34), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (214/214), 2.60 MiB | 16.83 MiB/s, done.\n",
-            "Resolving deltas: 100% (85/85), done.\n"
+            "remote: Enumerating objects: 218, done.\u001b[K\n",
+            "remote: Counting objects: 100% (218/218), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (181/181), done.\u001b[K\n",
+            "remote: Total 218 (delta 88), reused 124 (delta 34), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (218/218), 2.60 MiB | 5.64 MiB/s, done.\n",
+            "Resolving deltas: 100% (88/88), done.\n"
           ]
         }
       ],
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -430,7 +430,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -475,7 +475,7 @@
       "metadata": {
         "id": "kK4ND6sK5yaT"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -490,7 +490,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1388,9 +1388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6aJrNyoNJt4v",
-        "outputId": "741f25d2-2109-40cd-8341-bb9acc9111c5"
+        "outputId": "c0b528a8-e32c-4249-8cfb-46a898ce36e1"
       },
-      "execution_count": 43,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1398,12 +1398,12 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-cxybtxv_\n",
-            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-cxybtxv_\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-9y5ep3v5\n",
+            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-9y5ep3v5\n",
             "Building wheels for collected packages: NVCCPlugin\n",
             "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=b2402da2afc791841366a9570d0a93dd9d0f1b4e39ba8109ee438e385e3add5f\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-irds0d6w/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=dfc622b3d78aadada290d0f0029ea7cb143864b535e5ef589f00cc3d9b1aee3c\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-hj4nnext/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
             "Successfully built NVCCPlugin\n",
             "Installing collected packages: NVCCPlugin\n",
             "Successfully installed NVCCPlugin-0.0.2\n"
@@ -1421,16 +1421,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zPCLbxXtGbXt",
-        "outputId": "5e758c09-6cd4-4895-d228-499292d7eb99"
+        "outputId": "3327ac31-bc32-4bed-8b9f-57bb92ba4dea"
       },
-      "execution_count": 44,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "created output directory at /content/t1/Cuda_Colab_study/nvidia_samples/0_intro/simplePrintf/src\n",
-            "Out bin /content/t1/Cuda_Colab_study/nvidia_samples/0_intro/simplePrintf/result.out\n"
+            "created output directory at /content/src\n",
+            "Out bin /content/result.out\n"
           ]
         }
       ]
@@ -1453,10 +1453,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8c9ab307-9cfb-4c88-f9c9-ed6f0563cfd8",
+        "outputId": "6b76498e-d359-4efa-aa4a-256e97cea44d",
         "id": "bX2TiALNRYyf"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1494,9 +1494,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OwvnqvY25Ion",
-        "outputId": "1282292c-0fcd-4cf5-dfbd-df6f123cdc14"
+        "outputId": "2076da9b-873a-4b12-e405-debf584fc727"
       },
-      "execution_count": 47,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1504,6 +1504,176 @@
           "text": [
             " hello world from main! \n",
             " hello world from GPU! \n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CPU Version -- Vector add\n",
+        "ref : https://cuda-tutorial.readthedocs.io/en/latest/tutorials/tutorial01/"
+      ],
+      "metadata": {
+        "id": "W3VvjHN179xY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%cu \n",
+        "#include<stdio.h>\n",
+        "#define N 10000000\n",
+        "\n",
+        "void vector_add(float *out, float *a, float *b, int n) {\n",
+        "    for(int i = 0; i < n; i++){\n",
+        "        out[i] = a[i] + b[i];\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main(){\n",
+        "    float *a, *b, *out; \n",
+        "    int  i;\n",
+        "\n",
+        "    // Allocate memory\n",
+        "    a   = (float*)malloc(sizeof(float) * N);\n",
+        "    b   = (float*)malloc(sizeof(float) * N);\n",
+        "    out = (float*)malloc(sizeof(float) * N);\n",
+        "\n",
+        "    // Initialize array\n",
+        "    for(int i = 0; i < N; i++){\n",
+        "        a[i] = 1.0f; b[i] = 2.0f;\n",
+        "    }\n",
+        "\n",
+        "    // Main function\n",
+        "    vector_add(out, a, b, N);\n",
+        "    for(i=0;i<5;i++){\n",
+        "        printf(\"%f + %f = %f\\n\",a[i],b[i],out[i]);\n",
+        "    }\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "H4r2bLNH78-b",
+        "outputId": "acfe6319-2a12-4be1-dcf3-c3dd9a8a2251",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# GPGPU version --  Vector add\n",
+        "ref : https://cuda-tutorial.readthedocs.io/en/latest/tutorials/tutorial01/ "
+      ],
+      "metadata": {
+        "id": "GwteycTl8z5r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%cu\n",
+        "#include<stdio.h> \n",
+        "static void HandleError( cudaError_t err,const char *file,int line ) {\n",
+        "    if (err != cudaSuccess) {\n",
+        "        printf( \"%s in %s at line %d\\n\", cudaGetErrorString( err ),\n",
+        "                file, line );\n",
+        "        exit( EXIT_FAILURE );\n",
+        "    }\n",
+        "}\n",
+        "#define HANDLE_ERROR( err ) (HandleError( err, __FILE__, __LINE__ )) \n",
+        "#define N 10000000\n",
+        "__global__ void vector_add(float *out, float *a, float *b, int n) {\n",
+        "    for(int i = 0; i < n; i++){\n",
+        "        out[i] = a[i] + b[i];\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "int main(){\n",
+        "    float *a, *b, *out; \n",
+        "    float *d_a,*d_b,*d_out;\n",
+        "    int   i;\n",
+        "    // Allocate memory\n",
+        "    #if 1\n",
+        "    a   = (float*)malloc(sizeof(float) * N);\n",
+        "    b   = (float*)malloc(sizeof(float) * N);\n",
+        "    out  = (float*)malloc(sizeof(float) * N);\n",
+        "    #else \n",
+        "    HANDLE_ERROR(cudaMalloc(a,sizeof(float) * N));\n",
+        "    HANDLE_ERROR(cudaMalloc(b,sizeof(float) * N));\n",
+        "    HANDLE_ERROR(cudaMalloc(c,sizeof(float) * N));\n",
+        "    #endif \n",
+        "\n",
+        "    // Initialize array\n",
+        "    for(int i = 0; i < N; i++){\n",
+        "        a[i] = 1.0f; b[i] = 2.0f;\n",
+        "    }\n",
+        "\n",
+        "    // Main function\n",
+        "    #if 0 \n",
+        "    vector_add(out, a, b, N);\n",
+        "    #else\n",
+        "\n",
+        "    // Allocate device memory for a\n",
+        "    HANDLE_ERROR(cudaMalloc((void**)&d_a, sizeof(float) * N));\n",
+        "    HANDLE_ERROR(cudaMalloc((void**)&d_b, sizeof(float) * N));\n",
+        "    HANDLE_ERROR(cudaMalloc((void**)&d_out, sizeof(float) * N));\n",
+        "\n",
+        "    // Transfer data from host to device memory\n",
+        "    HANDLE_ERROR(cudaMemcpy(d_a, a, sizeof(float) * N, cudaMemcpyHostToDevice));\n",
+        "    HANDLE_ERROR(cudaMemcpy(d_b, b, sizeof(float) * N, cudaMemcpyHostToDevice));\n",
+        "    HANDLE_ERROR(cudaMemcpy(d_out, out, sizeof(float) * N, cudaMemcpyHostToDevice));\n",
+        "\n",
+        "    vector_add<<<1,1>>>(d_out, d_a, d_b, N);\n",
+        "    HANDLE_ERROR(cudaMemcpy(out, d_out, sizeof(float) * N, cudaMemcpyDeviceToHost));\n",
+        "    for(i=0;i<5;i++){\n",
+        "        printf(\"%f + %f = %f\\n\",a[i],b[i],out[i]);\n",
+        "    }\n",
+        "    // Cleanup after kernel execution\n",
+        "    cudaFree(d_a);\n",
+        "    cudaFree(d_b);\n",
+        "    cudaFree(d_out);\n",
+        "    #endif\n",
+        "    free(a);\n",
+        "    free(b);\n",
+        "    free(out);\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "b2ZpGvn27FyW",
+        "outputId": "18191def-114c-4434-f52a-92eef0f0fdba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
             "\n"
           ]
         }
@@ -1574,7 +1744,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
