使用 Colaboratory 建立

--- a/cuda_colab_beginner1.ipynb
+++ b/cuda_colab_beginner1.ipynb
@@ -409,7 +409,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%%writefile vector_div_cpu.cu\n",
+        "%%writefile vector_add_cpu.cu\n",
         "\n",
         "#include<stdio.h>\n",
         "#define N 10000000\n",
@@ -565,7 +565,7 @@
     {
       "cell_type": "code",
       "source": [
-        "%%writefile vector_div_gpu.cu\n",
+        "%%writefile vector_add_gpu.cu\n",
         "#include<stdio.h> \n",
         "static void HandleError( cudaError_t err,const char *file,int line ) {\n",
         "    if (err != cudaSuccess) {\n",
