使用 Colaboratory 建立

--- a/cuda_colab_beginner1.ipynb
+++ b/cuda_colab_beginner1.ipynb
@@ -31,20 +31,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gvlavcVD4K7W",
-        "outputId": "fc83b14a-5d0d-4a81-ae5b-5deb62a3b740"
+        "outputId": "0034f69e-5a7d-4537-b669-122e7bd3f149"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tue Sep 27 06:33:19 2022       \n",
+            "Tue Sep 27 06:44:07 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -53,7 +53,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   45C    P8    10W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   36C    P8     9W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -122,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "evxzc04GGqH3",
-        "outputId": "ab304a89-4514-41d5-f905-eb99cbd3c06f"
+        "outputId": "cbfd1f73-0316-482e-b2a9-00dbec38932f"
       },
       "outputs": [
         {
@@ -218,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6aJrNyoNJt4v",
-        "outputId": "254bd897-98e3-43b6-9e94-dfe0c60d8ccc"
+        "outputId": "f276dc5a-ee88-46de-c5cc-ef346f40c6bd"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,12 +228,12 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-ap1m0dk4\n",
-            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-ap1m0dk4\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-tgszhyaq\n",
+            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-tgszhyaq\n",
             "Building wheels for collected packages: NVCCPlugin\n",
             "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=ad3b1a1720741ccb31abe6213d5492003668eb0569bb035b19b8e4529fae99d1\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-e3q2968d/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=90382e8f401ddf0b43a6920c94bd5fc0f9931cf96c81d9463d0be73ab726191f\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-sru0bhrk/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
             "Successfully built NVCCPlugin\n",
             "Installing collected packages: NVCCPlugin\n",
             "Successfully installed NVCCPlugin-0.0.2\n"
@@ -251,9 +251,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zPCLbxXtGbXt",
-        "outputId": "1c334d4e-2205-4c98-fdd4-3b2d8761e7ad"
+        "outputId": "ce195107-c5a3-4b1c-bce7-9a83408937a3"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,10 +283,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25289631-291a-478c-ac0e-db0896b70b47",
+        "outputId": "3097e04e-a14a-4c7c-9474-2282b1156cdb",
         "id": "bX2TiALNRYyf"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,9 +324,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OwvnqvY25Ion",
-        "outputId": "0c7dfe3a-01dd-41ed-d5d5-f27a06715078"
+        "outputId": "ccf7ba81-ebe9-4bb6-f0f4-08999d313390"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,9 +388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H4r2bLNH78-b",
-        "outputId": "acfe6319-2a12-4be1-dcf3-c3dd9a8a2251"
+        "outputId": "18a0bcfe-aef1-4a41-ead8-7bafad6c3a89"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,15 +446,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VjzPQ0MMORyY",
-        "outputId": "9608ce8f-3112-4d87-a8c9-6fab40aadef6"
+        "outputId": "61337b47-b478-4da9-ddc1-01400dd8c8c9"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing vector_div_cpu.cu\n"
+            "Writing vector_add_cpu.cu\n"
           ]
         }
       ]
@@ -544,9 +544,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b2ZpGvn27FyW",
-        "outputId": "18191def-114c-4434-f52a-92eef0f0fdba"
+        "outputId": "70979fed-e436-427c-e93d-2759bbd57906"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,15 +637,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ecMH2A6pOizA",
-        "outputId": "6f809ced-f84a-4491-dbdf-4b31bba5b35f"
+        "outputId": "cfa1a90a-5648-471a-ac54-8da3f8c259e7"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting vector_div_gpu.cu\n"
+            "Writing vector_add_gpu.cu\n"
           ]
         }
       ]
@@ -660,16 +660,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gs6EjFzqPRkX",
-        "outputId": "fac72943-418d-42b2-cf98-aa0429bf4bbe"
+        "outputId": "2ea27e2f-08d9-4505-9be1-deaf420b70a7"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cuda_Colab_study  src\t vector_add_cpu.cu  vector_div_cpu.cu  v_gpu\n",
-            "sample_data\t  v_cpu  vector_add_gpu.cu  vector_div_gpu.cu\n"
+            "sample_data  src  vector_add_cpu.cu  vector_add_gpu.cu\n"
           ]
         }
       ]
@@ -677,23 +676,23 @@
     {
       "cell_type": "code",
       "source": [
-        "!nvcc vector_div_cpu.cu -o v_cpu"
+        "!nvcc vector_add_cpu.cu -o v_cpu"
       ],
       "metadata": {
         "id": "1pvgwAfFPUhf"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!nvcc vector_div_gpu.cu -o v_gpu"
+        "!nvcc vector_add_gpu.cu -o v_gpu"
       ],
       "metadata": {
         "id": "5xZH_3MCPc3m"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -706,23 +705,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kdnc5CVePjt6",
-        "outputId": "caf3f1be-b4e2-46b1-dd3d-4f7617a625f4"
+        "outputId": "fc2b8c7f-fcfb-4607-b5fe-f1379ddccfbb"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
             "\n",
-            "real\t0m0.114s\n",
-            "user\t0m0.062s\n",
-            "sys\t0m0.049s\n"
+            "real\t0m0.111s\n",
+            "user\t0m0.059s\n",
+            "sys\t0m0.050s\n"
           ]
         }
       ]
@@ -737,9 +736,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HB_JFFpvPQz8",
-        "outputId": "08161756-3388-41e7-dc20-b66aea83019c"
+        "outputId": "95f19c64-c706-418b-ab38-186bcbd0edfd"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -762,37 +761,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0ooYaLRdPqGS",
-        "outputId": "82091ced-fa03-443c-a52f-b1e3138338db"
+        "outputId": "6ef4efab-e02d-4159-967c-ea0788d5e9ad"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "==671== NVPROF is profiling process 671, command: ./v_gpu\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "1.000000 + 2.000000 = 0.500000\n",
-            "==671== Profiling application: ./v_gpu\n",
-            "==671== Profiling result:\n",
+            "==504== NVPROF is profiling process 504, command: ./v_gpu\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "1.000000 + 2.000000 = 3.000000\n",
+            "==504== Profiling application: ./v_gpu\n",
+            "==504== Profiling result:\n",
             "            Type  Time(%)      Time     Calls       Avg       Min       Max  Name\n",
-            " GPU activities:   95.62%  1.40452s         1  1.40452s  1.40452s  1.40452s  vector_add(float*, float*, float*, int)\n",
-            "                    2.44%  35.835ms         1  35.835ms  35.835ms  35.835ms  [CUDA memcpy DtoH]\n",
-            "                    1.94%  28.564ms         3  9.5212ms  8.1690ms  12.035ms  [CUDA memcpy HtoD]\n",
-            "      API calls:   82.97%  1.47078s         4  367.70ms  8.3824ms  1.44146s  cudaMemcpy\n",
-            "                   16.87%  298.97ms         3  99.657ms  177.84us  298.59ms  cudaMalloc\n",
-            "                    0.13%  2.2556ms         3  751.88us  227.60us  1.0171ms  cudaFree\n",
-            "                    0.02%  347.01us         1  347.01us  347.01us  347.01us  cuDeviceTotalMem\n",
-            "                    0.01%  172.22us       101  1.7050us     136ns  76.647us  cuDeviceGetAttribute\n",
-            "                    0.00%  30.072us         1  30.072us  30.072us  30.072us  cuDeviceGetName\n",
-            "                    0.00%  28.132us         1  28.132us  28.132us  28.132us  cudaLaunchKernel\n",
-            "                    0.00%  6.8770us         1  6.8770us  6.8770us  6.8770us  cuDeviceGetPCIBusId\n",
-            "                    0.00%  1.5880us         3     529ns     185ns  1.0430us  cuDeviceGetCount\n",
-            "                    0.00%  1.2350us         2     617ns     314ns     921ns  cuDeviceGet\n",
-            "                    0.00%     252ns         1     252ns     252ns     252ns  cuDeviceGetUuid\n"
+            " GPU activities:   91.31%  687.79ms         1  687.79ms  687.79ms  687.79ms  vector_add(float*, float*, float*, int)\n",
+            "                    4.83%  36.416ms         1  36.416ms  36.416ms  36.416ms  [CUDA memcpy DtoH]\n",
+            "                    3.85%  29.024ms         3  9.6748ms  8.2584ms  12.098ms  [CUDA memcpy HtoD]\n",
+            "      API calls:   71.90%  755.17ms         4  188.79ms  8.4988ms  725.34ms  cudaMemcpy\n",
+            "                   27.83%  292.28ms         3  97.428ms  125.36us  291.97ms  cudaMalloc\n",
+            "                    0.22%  2.2661ms         3  755.38us  219.19us  1.0281ms  cudaFree\n",
+            "                    0.03%  341.46us         1  341.46us  341.46us  341.46us  cuDeviceTotalMem\n",
+            "                    0.01%  150.09us       101  1.4860us     140ns  64.070us  cuDeviceGetAttribute\n",
+            "                    0.00%  30.536us         1  30.536us  30.536us  30.536us  cudaLaunchKernel\n",
+            "                    0.00%  28.536us         1  28.536us  28.536us  28.536us  cuDeviceGetName\n",
+            "                    0.00%  6.4620us         1  6.4620us  6.4620us  6.4620us  cuDeviceGetPCIBusId\n",
+            "                    0.00%  1.6350us         3     545ns     192ns  1.0990us  cuDeviceGetCount\n",
+            "                    0.00%  1.2560us         2     628ns     304ns     952ns  cuDeviceGet\n",
+            "                    0.00%     233ns         1     233ns     233ns     233ns  cuDeviceGetUuid\n"
           ]
         }
       ]
