使用 Colaboratory 建立

--- a/CUDA_GPU-Samples-1_utility.ipynb
+++ b/CUDA_GPU-Samples-1_utility.ipynb
@@ -1228,11 +1228,11 @@
         "!git clone https://github.com/chiyanglin-AStar/nvidia_cuda_samples.git"
       ],
       "metadata": {
-        "id": "LFnI5Zl3rnmr",
-        "outputId": "03f38630-16c7-4b5a-e454-28842e5eab08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LFnI5Zl3rnmr",
+        "outputId": "03f38630-16c7-4b5a-e454-28842e5eab08"
       },
       "execution_count": 28,
       "outputs": [
@@ -1263,11 +1263,11 @@
         "!pip install git+https://github.com/andreinechaev/nvcc4jupyter.git"
       ],
       "metadata": {
-        "id": "_eLi64uKnDuz",
-        "outputId": "19728733-1a5b-4003-e6ec-ae5c39b4779b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_eLi64uKnDuz",
+        "outputId": "19728733-1a5b-4003-e6ec-ae5c39b4779b"
       },
       "execution_count": 5,
       "outputs": [
@@ -1296,11 +1296,11 @@
         "%load_ext nvcc_plugin"
       ],
       "metadata": {
-        "id": "WIOv7nAynFkb",
-        "outputId": "5e6fc38d-95e2-453d-dbf6-52e2d56fbbe8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WIOv7nAynFkb",
+        "outputId": "5e6fc38d-95e2-453d-dbf6-52e2d56fbbe8"
       },
       "execution_count": 6,
       "outputs": [
@@ -1320,11 +1320,11 @@
         "!apt install tree"
       ],
       "metadata": {
-        "id": "VBjQ7AElxwqa",
-        "outputId": "39039351-dcb7-45fd-da8a-aa8b64ce3d67",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VBjQ7AElxwqa",
+        "outputId": "39039351-dcb7-45fd-da8a-aa8b64ce3d67"
       },
       "execution_count": 30,
       "outputs": [
@@ -1363,7 +1363,7 @@
       "metadata": {
         "id": "NPtKjU4xx4Op"
       },
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1372,13 +1372,13 @@
         "!tree ."
       ],
       "metadata": {
-        "id": "iUGGV0_Xx2dD",
-        "outputId": "9e1ca25f-13ac-4954-bf9a-bb6c48873af1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iUGGV0_Xx2dD",
+        "outputId": "4dc7b0c6-a326-4fdb-d577-df162d2c4ef9"
       },
-      "execution_count": 33,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -4595,24 +4595,70 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!ls "
+        "check the path of samples directory "
       ],
       "metadata": {
-        "id": "gtWOXH3UoVYV",
-        "outputId": "ac99b031-5a14-4f4f-b858-bcfd5cf5a255",
+        "id": "DCYRdXqHytoD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cd ./nvidia_cuda_samples/Samples/0_Introduction/asyncAPI"
+      ],
+      "metadata": {
+        "id": "ddCl0LlHysGL"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "id": "xofef61GzgW1",
+        "outputId": "b7d1bc3d-e8f4-4118-b682-027fabceaefa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "bandwidth_test.cu  nvidia_cuda_samples\tsample_data  src\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls ./nvidia_cuda_samples/Samples/0_Introduction/asyncAPI"
+      ],
+      "metadata": {
+        "id": "9r_-xsSp0NZN",
+        "outputId": "a77a082c-2142-4a30-8769-ac686f38c557",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "asyncAPI.cu\t\t asyncAPI_vs2019.vcxproj  NsightEclipse.xml\n",
+            "asyncAPI_vs2017.sln\t asyncAPI_vs2022.sln\t  README.md\n",
+            "asyncAPI_vs2017.vcxproj  asyncAPI_vs2022.vcxproj\n",
+            "asyncAPI_vs2019.sln\t Makefile\n"
           ]
         }
       ]
