使用 Colaboratory 建立

--- a/超簡單台股每日爬蟲教學.ipynb
+++ b/超簡單台股每日爬蟲教學.ipynb
@@ -704,6 +704,108 @@
           "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "from io import StringIO\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "def crawl_price(date):\n",
+        "    r = requests.post('http://www.twse.com.tw/exchangeReport/MI_INDEX?response=csv&date=' + str(date).split(' ')[0].replace('-','') + '&type=ALL')\n",
+        "    ret = pd.read_csv(StringIO(\"\\n\".join([i.translate({ord(c): None for c in ' '}) \n",
+        "                                        for i in r.text.split('\\n') \n",
+        "                                        if len(i.split('\",')) == 17 and i[0] != '='])), header=0)\n",
+        "    ret = ret.set_index('0050')\n",
+        "    ret['成交金額'] = ret['成交金額'].str.replace(',','')\n",
+        "    ret['成交股數'] = ret['成交股數'].str.replace(',','')\n",
+        "    return ret"
+      ],
+      "metadata": {
+        "id": "0dIEjTVh4TDA"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "抓九天資料"
+      ],
+      "metadata": {
+        "id": "9wBRpxGr5fbi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "import time\n",
+        "\n",
+        "data = {}\n",
+        "n_days = 2\n",
+        "date = datetime.datetime.now()\n",
+        "fail_count = 0\n",
+        "allow_continuous_fail_count = 5\n",
+        "while len(data) < n_days:\n",
+        "\n",
+        "    print('parsing', date)\n",
+        "    # 使用 crawPrice 爬資料\n",
+        "    try:\n",
+        "        # 抓資料\n",
+        "        data[date.date()] = crawl_price(date)\n",
+        "        print('success!')\n",
+        "        fail_count = 0\n",
+        "    except:\n",
+        "        # 假日爬不到\n",
+        "        print('fail! check the date is holiday')\n",
+        "        fail_count += 1\n",
+        "        if fail_count == allow_continuous_fail_count:\n",
+        "            raise\n",
+        "            break\n",
+        "    \n",
+        "    # 減一天\n",
+        "    date -= datetime.timedelta(days=1)\n",
+        "    time.sleep(10)"
+      ],
+      "metadata": {
+        "id": "4qQnwu9u5S2H",
+        "outputId": "2ffdff2d-2c2b-4d51-8e2c-e4c4bcf6f6a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 340
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "parsing 2023-05-03 13:57:06.431267\n",
+            "fail! check the date is holiday\n",
+            "parsing 2023-05-02 13:57:06.431267\n",
+            "fail! check the date is holiday\n",
+            "parsing 2023-05-01 13:57:06.431267\n",
+            "fail! check the date is holiday\n",
+            "parsing 2023-04-30 13:57:06.431267\n",
+            "fail! check the date is holiday\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-016a072cbb0e>\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;31m# 減一天\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mdate\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimedelta\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
     }
   ]
 }
